@@ -19,6 +19,9 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 	- Add missing link libs (m, nsl, socket) on Solaris installs.
 	- Fix vsetuserquota() to write properly formatted quota to 
 	  maildirsize file.
+	- Update vdominfo to ignore non-domains in users/assign.
+	- Update vconvert and dotqmail2valias to ignore non-domains in
+	  users/assign.
 
 5.4.2 - released 22-Feb-04
 
